--- a/src/main/resources/templates/mypage-3.html
+++ b/src/main/resources/templates/mypage-3.html
@@ -145,231 +145,152 @@
 					<!-- 찜content -->
 					<div class="pt-2 px-4 ps-lg-0 pe-xl-5 ms-5">
 
-						<!-- Items grid-->
-						<div
-							class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gy-sm-4 gy-3 gx-3 mb-4">
-							<!-- Product-->
-							<div class="col mb-2">
-								<article class="card h-100 border-0 shadow">
-									<div class="card-img-top position-relative overflow-hidden">
-										<a class="d-block" href="nft-single-buy.html"><img
-											src="img/ukids/nursery.JPG" alt="Product image"></a>
-										<!-- Wishlist button-->
-										<button
-											class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0"
-											type="button" data-bs-toggle="tooltip"
-											data-bs-placement="top" title="Remove from favorites"
-											style="margin: 12px;">
-											<i class="ci-heart-filled"></i>
-										</button>
-									</div>
-									<a class="nav-link-style fs-sm stretched-link"
-										href="nft-vendor.html">
-										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울유치원</a>
-											</div>
-											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
-											<div class="fs-ms text-muted cgw24">서울특별시 어딘가 서울특별시 어딘가
-												서울특별시 어딘가 서울특별시 어딘가 서울특별시 어딘가</div>
-										</div>
-									</a>
-								</article>
-							</div>
-							<!-- Product-->
-							<div class="col mb-2">
-								<article class="card h-100 border-0 shadow">
-									<div class="card-img-top position-relative overflow-hidden">
-										<a class="d-block" href="nft-single-auction-live.html"><img
-											src="img/ukids/nursery.JPG" alt="Product image"></a>
-										<!-- Wishlist button-->
-										<button
-											class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0"
-											type="button" data-bs-toggle="tooltip"
-											data-bs-placement="top" title="Remove from favorites"
-											style="margin: 12px;">
-											<i class="ci-heart-filled"></i>
-										</button>
-									</div>
-									<a class="nav-link-style fs-sm stretched-link"
-										href="nft-vendor.html">
-										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div
-												class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link"
-													href="nft-vendor.html">서울시청직장어린이집</a>
-											</div>
-											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
-											<div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
-										</div>
-									</a>
-								</article>
-							</div>
-							<!-- Product-->
-							<div class="col mb-2">
-								<article class="card h-100 border-0 shadow">
-									<div class="card-img-top position-relative overflow-hidden">
-										<a class="d-block" href="nft-single-auction-live.html"><img
-											src="img/ukids/nursery.JPG" alt="Product image"></a>
-										<!-- Wishlist button-->
-										<button
-											class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0"
-											type="button" data-bs-toggle="tooltip"
-											data-bs-placement="top" title="Remove from favorits"
-											style="margin: 12px;">
-											<i class="ci-heart-filled"></i>
-										</button>
-									</div>
-									<a class="nav-link-style fs-sm stretched-link"
-										href="nft-vendor.html">
-										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div
-												class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link"
-													href="nft-vendor.html">서울시청직장어린이집</a>
-											</div>
-											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
-											<div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
-										</div>
-									</a>
-								</article>
-							</div>
-						</div>
-						<!-- Items grid-->
-						<div
-							class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gy-sm-4 gy-3 gx-3 mb-4">
-							<!-- Product-->
-							<div class="col mb-2">
-								<article class="card h-100 border-0 shadow">
-									<div class="card-img-top position-relative overflow-hidden">
-										<a class="d-block" href="nft-single-buy.html"><img
-											src="img/ukids/nursery.JPG" alt="Product image"></a>
-										<!-- Wishlist button-->
-										<button
-											class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0"
-											type="button" data-bs-toggle="tooltip"
-											data-bs-placement="top" title="Remove from favorites"
-											style="margin: 12px;">
-											<i class="ci-heart-filled"></i>
-										</button>
-									</div>
-									<a class="nav-link-style fs-sm stretched-link"
-										href="nft-vendor.html">
-										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div
-												class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link"
-													href="nft-vendor.html">서울유치원</a>
-											</div>
-											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
-											<div class="fs-ms text-muted cgw24">서울특별시 어딘가 서울특별시 어딘가
-												서울특별시 어딘가 서울특별시 어딘가</div>
-										</div>
-									</a>
-								</article>
-							</div>
-							<!-- Product-->
-							<div class="col mb-2">
-								<article class="card h-100 border-0 shadow">
-									<div class="card-img-top position-relative overflow-hidden">
-										<a class="d-block" href="nft-single-auction-live.html"><img
-											src="img/ukids/nursery.JPG" alt="Product image"></a>
-										<!-- Wishlist button-->
-										<button
-											class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0"
-											type="button" data-bs-toggle="tooltip"
-											data-bs-placement="top" title="Remove from favorites"
-											style="margin: 12px;">
-											<i class="ci-heart-filled"></i>
-										</button>
-									</div>
-									<a class="nav-link-style fs-sm stretched-link"
-										href="nft-vendor.html">
-										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div
-												class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link"
-													href="nft-vendor.html">서울유치원</a>
-											</div>
-											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
-											<div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
-										</div>
-									</a>
-								</article>
-							</div>
-							<!-- Product-->
-							<div class="col mb-2">
-								<article class="card h-100 border-0 shadow">
-									<div class="card-img-top position-relative overflow-hidden">
-										<a class="d-block" href="nft-single-auction-live.html"><img
-											src="img/ukids/nursery.JPG" alt="Product image"></a>
-										<!-- Wishlist button-->
-										<button
-											class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0"
-											type="button" data-bs-toggle="tooltip"
-											data-bs-placement="top" title="Remove from favorits"
-											style="margin: 12px;">
-											<i class="ci-heart-filled"></i>
-										</button>
-									</div>
-									<a class="nav-link-style fs-sm stretched-link"
-										href="nft-vendor.html">
-										<div class="card-footer mt-n1 py-0 border-0 mb-3">
-											<div
-												class="d-flex align-items-center position-relative py-3 mt-2">
-												<a class="nav-link-style fs-sm stretched-link"
-													href="nft-vendor.html">서울시청직장어린이집</a>
-											</div>
-											<i class="ci-location me-2 cgw16 fs-ms cgw27"></i>
-											<div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
-										</div>
-									</a>
-								</article>
-							</div>
-						</div>
-						<button class="btn btn-outline-danger">
-							<i class="ci-trash me-2"></i>전체 삭제
-						</button>
-					</div>
-					<!-- pagination -->
-					<th:block th:if="${count != 0}">
-						<nav class="d-flex justify-content-between pt-2 mb-5"
-							aria-label="Page navigation" style="width: 790px;">
-							<ul class="pagination" id="prev">
-								<!-- 이전 페이지 -->
-								<li class="page-item"><a class="page-link"
-									th:onclick="|movePage(${pageInfo.prevPage});|"><i
-										class="ci-arrow-left me-2"></i>Prev</a></li>
-							</ul>
-							<ul class="pagination">
-								<li class="page-item d-sm-none"><span
-									class="page-link page-link-static">1 / 5</span></li>
-
-								<th:block
-									th:each="num, status : ${#numbers.sequence(pageInfo.startPage, pageInfo.endPage)}">
-									<th:block th:if="${status.current == pageInfo.currentPage}">
-										<li class="page-item d-none d-sm-block page"
-											aria-current="page"><span class="page-link">[[${status.current}]]<span
-												class="visually-hidden">(current)</span></span></li>
-									</th:block>
-									<th:block th:if="${status.current != pageInfo.currentPage}">
-										<li class="page-item d-none d-sm-block"><a
-											class="page-link" th:onclick="|movePage(${status.current});|">[[${status.current}]]</a></li>
-									</th:block>
-								</th:block>
-
-							</ul>
-							<ul class="pagination" id="next">
-								<li class="page-item"><a class="page-link"
-									th:onclick="|movePage(${pageInfo.nextPage});|"
-									aria-label="Next">Next<i class="ci-arrow-right ms-2"></i></a></li>
-							</ul>
-						</nav>
-					</th:block>
-				</section>
-			</div>
-		</div>
-	</main>
+            <!-- Items grid-->
+            <div class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gy-sm-4 gy-3 gx-3 mb-4">
+              <!-- Product-->
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-buy.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorites"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2"><a
+                          class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울유치원</a></div>
+                          <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">서울특별시 어딘가 서울특별시 어딘가 서울특별시 어딘가 서울특별시 어딘가 서울특별시 어딘가</div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <!-- Product-->
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-auction-live.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorites"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2"><a
+                          class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울시청직장어린이집</a></div>
+                          <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <!-- Product-->
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-auction-live.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorits"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2"><a
+                          class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울시청직장어린이집</a></div>
+                          <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+            </div>
+            <!-- Items grid-->
+            <div class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gy-sm-4 gy-3 gx-3 mb-4">
+              <!-- Product-->
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-buy.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorites"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2"><a
+                          class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울유치원</a></div>
+                      <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">서울특별시 어딘가 서울특별시 어딘가 서울특별시 어딘가 서울특별시 어딘가</div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <!-- Product-->
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-auction-live.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorites"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2"><a
+                          class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울유치원</a></div>
+                      <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <!-- Product-->
+              <div class="col mb-2">
+                <article class="card h-100 border-0 shadow">
+                  <div class="card-img-top position-relative overflow-hidden"><a class="d-block"
+                      href="nft-single-auction-live.html"><img src="img/ukids/nursery.JPG" alt="Product image"></a>
+                    <!-- Wishlist button-->
+                    <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
+                      data-bs-toggle="tooltip" data-bs-placement="top" title="Remove from favorits"
+                      style="margin: 12px;"><i class="ci-heart-filled"></i></button>
+                  </div>
+                  <a class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">
+                    <div class="card-footer mt-n1 py-0 border-0 mb-3">
+                      <div class="d-flex align-items-center position-relative py-3 mt-2"><a
+                          class="nav-link-style fs-sm stretched-link" href="nft-vendor.html">서울시청직장어린이집</a></div>
+                          <i class="ci-location me-2 cgw16 fs-ms cgw27"></i><div class="fs-ms text-muted cgw24">서울특별시 어딘가</div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+            </div>
+            <button class="btn btn-outline-danger"><i class="ci-trash me-2"></i>전체 삭제</button>
+          </div>
+          <!-- pagination -->
+          <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#"><i class="ci-arrow-left me-2"></i>Prev</a></li>
+            </ul>
+            <ul class="pagination">
+              <li class="page-item d-sm-none"><span class="page-link page-link-static">1 / 5</span></li>
+              <li class="page-item page d-none d-sm-block" aria-current="page"><span class="page-link">1<span
+                    class="visually-hidden">(current)</span></span></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">2</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">3</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">4</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">5</a></li>
+            </ul>
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#" aria-label="Next">Next<i
+                    class="ci-arrow-right ms-2"></i></a></li>
+            </ul>
+          </nav>
+        </section>
+      </div>
+    </div>
+  </main>
+  <!-- 푸터!!!!!!!!!!-->
 	<!-- Footer-->
 	<footer th:fragment="footer" th:replace="~{common :: footer}"></footer>
 
