--- a/src/main/resources/templates/mypage-4.html
+++ b/src/main/resources/templates/mypage-4.html
@@ -71,7 +71,7 @@
 							<ol
 								class="breadcrumb breadcrumb-light fw-bold fs-md flex-lg-nowrap justify-content-center justify-content-lg-end">
 								<li class="breadcrumb-item"><a class="text-nowrap"
-									href="index.html"><i class="ci-home"></i>유키즈</a></li>
+									th:href="@{/}"><i class="ci-home"></i>유키즈</a></li>
 								<li class="breadcrumb-item text-light">마이페이지</li>
 								<li class="breadcrumb-item text-nowrap cgw3" aria-current="page">불편사항
 									신고 조회</li>
