--- a/src/main/resources/templates/mypage-5.html
+++ b/src/main/resources/templates/mypage-5.html
@@ -70,10 +70,9 @@
 							<ol
 								class="breadcrumb breadcrumb-light fw-bold fs-md flex-lg-nowrap justify-content-center justify-content-lg-end">
 								<li class="breadcrumb-item"><a class="text-nowrap"
-									href="index.html"><i class="ci-home"></i>유키즈</a></li>
+									th:href="@{/}"><i class="ci-home"></i>유키즈</a></li>
 								<li class="breadcrumb-item text-light">마이페이지</li>
-								<li class="breadcrumb-item text-nowrap cgw3" aria-current="page">내가
-									쓴 게시글</li>
+								<li class="breadcrumb-item text-nowrap cgw3" aria-current="page">내가 쓴 게시글</li>
 							</ol>
 						</nav>
 					</div>
@@ -104,33 +103,33 @@
 								<h3 class="fs-sm mb-0 text-muted">마이페이지</h3>
 							</div>
 							<ul class="list-unstyled mb-0">
-                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
-                    th:href="@{/mypage}"><i class="ci-user opacity-60 me-2"></i>회원정보 수정</a></li>
-                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
-                    th:href="@{/mypage-2}"><i class="ci-edit opacity-60 me-2"></i>입소 신청 조회<span
-                      class="fs-sm text-muted ms-auto">1</span></a></li>
-                <li class="border-bottom mb-0">
-                  <div class="cgw3 d-flex align-items-center px-4 py-3"><i class="ci-heart opacity-60 me-2"></i>찜<span
-                      class="fs-sm text-muted ms-auto">3</span></div>
-                </li>
-                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
-                    th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항 신고 조회<span
-                      class="fs-sm text-muted ms-auto">3</span></a></li>
-                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
-                    th:href="@{/mypage-5}"><i class="ci-document opacity-60 me-2"></i>내가 쓴 게시글<span
-                      class="fs-sm text-muted ms-auto">3</span></a></li>
-                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
-                    th:href="@{/mypage-6}"><i class="ci-bag opacity-60 me-2"></i>대여 내역 조회<span
-                      class="fs-sm text-muted ms-auto">3</span></a></li>
-                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
-                    th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
-                      class="fs-sm text-muted ms-auto">3</span></a></li>
-                <li class="border-bottom mb-0">
-                  <div class="nav-link-style d-flex align-items-center px-4 py-2"><a
-                      class="fs-sm ms-auto btn btn-logout btn-sm" href="#"><i class="ci-sign-out me-2"></i>로그아웃</a>
-                  </div>
-                </li>
-              </ul>
+				                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+				                    th:href="@{/mypage}"><i class="ci-user opacity-60 me-2"></i>회원정보 수정</a></li>
+				                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+				                    th:href="@{/mypage-2}"><i class="ci-edit opacity-60 me-2"></i>입소 신청 조회<span
+				                      class="fs-sm text-muted ms-auto">1</span></a></li>
+				                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+				                    th:href="@{/mypage-3}"><i class="ci-heart opacity-60 me-2"></i>찜<span
+				                      class="fs-sm text-muted ms-auto">3</span></a></li>
+				                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+				                    th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항 신고 조회<span
+				                      class="fs-sm text-muted ms-auto">3</span></a></li>
+				                <li class="border-bottom mb-0">
+				                  <div class="cgw3 d-flex align-items-center px-4 py-3"><i class="ci-document opacity-60 me-2"></i>내가 쓴
+				                    게시글<span class="fs-sm text-muted ms-auto">3</span></div>
+				                </li>
+				                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+				                    th:href="@{/mypage-6}"><i class="ci-bag opacity-60 me-2"></i>대여 내역 조회<span
+				                      class="fs-sm text-muted ms-auto">3</span></a></li>
+				                <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3"
+				                    th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
+				                      class="fs-sm text-muted ms-auto">3</span></a></li>
+				                <li class="border-bottom mb-0">
+				                  <div class="nav-link-style d-flex align-items-center px-4 py-2"><a
+				                      class="fs-sm ms-auto btn btn-logout btn-sm" href="#"><i class="ci-sign-out me-2"></i>로그아웃</a>
+				                  </div>
+				                </li>
+				             </ul>
 						</div>
 					</div>
 				</aside>
@@ -143,141 +142,116 @@
 							쓴 게시글</h6>
 					</div>
 					<!-- 어린이집 입소 신청 목록-->
-					<div class="table-responsive fs-md mb-4 ms-4">
-						<table class="table table-hover mb-0">
-							<thead>
-								<tr>
-									<th class="cgw8 cgw9">번호</th>
-									<th class="cgw8 cgw9">제목</th>
-									<th class="cgw8 cgw9">작성일</th>
-									<th class="cgw8 cgw9"></th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td class="py-3 cgw9">1</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">2</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글글. 글글글글글글글글글글.
-											글글글글글글글글글글. </a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">3</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글.</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">4</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글.</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">5</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글.</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">6</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글.</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">7</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글.</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-								<tr>
-									<td class="py-3 cgw9">8</td>
-									<td class="py-3 cgw9"><a
-										class="nav-link-style-cgw fw-medium cgw28"
-										href="account-single-ticket.html">글글글글글글글글글글.</a></td>
-									<td class="py-3 cgw9">2023-01-01</td>
-									<td class="py-3 cgw9"><a href="#"><span
-											class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a
-										href="#"><span class="badge bg-secondary m-0">삭제</span></a></td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<!-- pagination -->
-					<th:block th:if="${count != 0}">
-						<nav class="d-flex justify-content-between pt-2 mb-5"
-							aria-label="Page navigation" style="width: 790px;">
-							<ul class="pagination" id="prev">
-								<!-- 이전 페이지 -->
-								<li class="page-item"><a class="page-link"
-									th:onclick="|movePage(${pageInfo.prevPage});|"><i
-										class="ci-arrow-left me-2"></i>Prev</a></li>
-							</ul>
-							<ul class="pagination">
-								<li class="page-item d-sm-none"><span
-									class="page-link page-link-static">1 / 5</span></li>
-
-								<th:block
-									th:each="num, status : ${#numbers.sequence(pageInfo.startPage, pageInfo.endPage)}">
-									<th:block th:if="${status.current == pageInfo.currentPage}">
-										<li class="page-item d-none d-sm-block page"
-											aria-current="page"><span class="page-link">[[${status.current}]]<span
-												class="visually-hidden">(current)</span></span></li>
-									</th:block>
-									<th:block th:if="${status.current != pageInfo.currentPage}">
-										<li class="page-item d-none d-sm-block"><a
-											class="page-link" th:onclick="|movePage(${status.current});|">[[${status.current}]]</a></li>
-									</th:block>
-								</th:block>
-
-							</ul>
-							<ul class="pagination" id="next">
-								<li class="page-item"><a class="page-link"
-									th:onclick="|movePage(${pageInfo.nextPage});|"
-									aria-label="Next">Next<i class="ci-arrow-right ms-2"></i></a></li>
-							</ul>
-						</nav>
-					</th:block>
-				</section>
-			</div>
-		</div>
-	</main>
-	<!-- 푸터!!!!!!!!!!-->
+          <div class="table-responsive fs-md mb-4 ms-4">
+            <table class="table table-hover mb-0">
+              <thead>
+                <tr>
+                  <th class="cgw8 cgw9">번호</th>
+                  <th class="cgw8 cgw9">제목</th>
+                  <th class="cgw8 cgw9">작성일</th>
+                  <th class="cgw8 cgw9"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="py-3 cgw9">1</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">2</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글글. 글글글글글글글글글글. 글글글글글글글글글글. </a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">3</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글.</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">4</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글.</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">5</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글.</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">6</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글.</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">7</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글.</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+                <tr>
+                  <td class="py-3 cgw9">8</td>
+                  <td class="py-3 cgw9"><a class="nav-link-style-cgw fw-medium cgw28"
+                      href="account-single-ticket.html">글글글글글글글글글글.</a></td>
+                  <td class="py-3 cgw9">2023-01-01</td>
+                  <td class="py-3 cgw9"><a href="#"><span
+                        class="badge-cgw3 bg-secondary-cgw1 m-0">수정</span></a>&nbsp;&nbsp;<a href="#"><span
+                        class="badge bg-secondary m-0">삭제</span></a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- pagination -->
+          <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#"><i class="ci-arrow-left me-2"></i>Prev</a></li>
+            </ul>
+            <ul class="pagination">
+              <li class="page-item d-sm-none"><span class="page-link page-link-static">1 / 5</span></li>
+              <li class="page-item page d-none d-sm-block" aria-current="page"><span class="page-link">1<span
+                    class="visually-hidden">(current)</span></span></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">2</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">3</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">4</a></li>
+              <li class="page-item d-none d-sm-block"><a class="page-link" href="#">5</a></li>
+            </ul>
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#" aria-label="Next">Next<i
+                    class="ci-arrow-right ms-2"></i></a></li>
+            </ul>
+          </nav>
+        </section>
+      </div>
+    </div>
+  </main>
+  <!-- 푸터!!!!!!!!!!-->
 	<!-- Footer-->
 	<footer th:fragment="footer" th:replace="~{common :: footer}"></footer>
 
