--- a/src/main/resources/templates/mypage-7.html
+++ b/src/main/resources/templates/mypage-7.html
@@ -10,34 +10,25 @@
     <meta name="keywords" content="bootstrap, shop, e-commerce, market, modern, responsive,  business, mobile, bootstrap, html5, css3, js, gallery, slider, touch, creative, clean">
     <meta name="author" content="Createx Studio"> -->
 <!-- Viewport-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Favicon and Touch Icons-->
-<link rel="apple-touch-icon" sizes="180x180"
-	th:href="@{/img/ukids/logo.jpg}">
-<link rel="icon" type="image/png" sizes="32x32"
-	th:href="@{/img/ukids/logo.jpg}">
-<link rel="icon" type="image/png" sizes="16x16"
-	th:href="@{/img/ukids/logo.jpg}">
-<link rel="manifest" th:href="@{/site.webmanifest}">
-<link rel="mask-icon" color="#fe6a6a"
-	th:href="@{/safari-pinned-tab.svg}">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="theme-color" content="#ffffff">
-<!-- Vendor Styles including: Font Icons, Plugins, etc.-->
-<link rel="stylesheet" media="screen"
-	th:href="@{/vendor/simplebar/dist/simplebar.min.css}" />
-<link rel="stylesheet" media="screen"
-	th:href="@{/vendor/tiny-slider/dist/tiny-slider.css}" />
-<link rel="stylesheet" media="screen"
-	th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
-<link rel="stylesheet" media="screen"
-	th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
-
-<!-- Main Theme Styles + Bootstrap-->
-<link rel="stylesheet" media="screen" th:href="@{/css/theme.min.css}">
-<link rel="stylesheet" th:href="@{/css/header.css}">
-<link rel="stylesheet" th:href="@{/css/footer.css}">
-<link rel="stylesheet" th:href="@{/css/cgw.css}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Favicon and Touch Icons-->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/ukids/logo.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/ukids/logo.jpg">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/ukids/logo.jpg">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" color="#fe6a6a" href="safari-pinned-tab.svg">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
+  <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
+  <link rel="stylesheet" media="screen" href="vendor/simplebar/dist/simplebar.min.css" />
+  <link rel="stylesheet" media="screen" href="vendor/tiny-slider/dist/tiny-slider.css" />
+  <link rel="stylesheet" media="screen" href="vendor/drift-zoom/dist/drift-basic.min.css" />
+  <link rel="stylesheet" media="screen" href="vendor/lightgallery.js/dist/css/lightgallery.min.css" />
+  <!-- Main Theme Styles + Bootstrap-->
+  <link rel="stylesheet" media="screen" href="css/theme.min.css">
+  <link rel="stylesheet" media="screen" href="css/cgw.css">
+  <link rel="stylesheet" media="screen" href="css/header.css">
+  <link rel="stylesheet" media="screen" href="css/footer.css">
 
 <!--jquery-->
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -80,7 +71,7 @@
 							<ol
 								class="breadcrumb breadcrumb-light fw-bold fs-md flex-lg-nowrap justify-content-center justify-content-lg-end">
 								<li class="breadcrumb-item"><a class="text-nowrap"
-									href="index.html"><i class="ci-home"></i>유키즈</a></li>
+									th:href="@{/}"><i class="ci-home"></i>유키즈</a></li>
 								<li class="breadcrumb-item text-light">마이페이지</li>
 								<li class="breadcrumb-item text-nowrap cgw3" aria-current="page">장바구니</li>
 							</ol>
