--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -70,7 +70,7 @@
 							<ol
 								class="breadcrumb breadcrumb-light fw-bold fs-md flex-lg-nowrap justify-content-center justify-content-lg-end">
 								<li class="breadcrumb-item"><a class="text-nowrap"
-									href="index.html"><i class="ci-home"></i>유키즈</a></li>
+									th:href="@{/}"><i class="ci-home"></i>유키즈</a></li>
 								<li class="breadcrumb-item text-light">마이페이지</li>
 								<li class="breadcrumb-item text-nowrap cgw3" aria-current="page">회원정보
 									수정</li>
@@ -146,10 +146,8 @@
 				<!-- Content  -->
 				<section class="col-lg-8">
 					<!-- Toolbar-->
-					<div
-						class="d-none d-lg-flex justify-content-between align-items-center pb-4 cgw7 mb-lg-3">
-						<h6 class="fs-change cgw4 mb-0 fw-bold" style="color: #fc6c93;">회원정보
-							수정</h6>
+					<div class="d-none d-lg-flex justify-content-between align-items-center pb-4 cgw7 mb-lg-3">
+						<h6 class="fs-change cgw4 mb-0 fw-bold" style="color: #fc6c93;">회원정보 수정</h6>
 					</div>
 					<!-- Profile form-->
 					<form id="enroll-container" action="/member/update" method="post">
